Fix images being too big
http://forums.hummingbird.me/t/review-images-broken/10928

--- a/app/assets/stylesheets/modules/anime-page.css.scss
+++ b/app/assets/stylesheets/modules/anime-page.css.scss
@@ -626,6 +626,10 @@ p img {
   }
 }
 
+.review-content img {
+  width: 100%;
+}
+
 .reader-actions {
   @extend .col-xs-12;
   padding: 10px 0;
